--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -324,6 +324,7 @@ ion-col {
   &.country {
     display: flex;
     justify-content: space-between;
+    padding-right: 0rem;
   }
 }
 
